--- a/leadgeneration/templates/base.html
+++ b/leadgeneration/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Godam - {% block pagetitle %}{% endblock %}</title>
+    <title>LEAD GENERATION - {% block pagetitle %}{% endblock %}</title>
     <meta name="description" content="{%block pagedescription %}{% endblock %}">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="{%block pageauthor %}{% endblock %}">
